// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should fail to parse if value is outside the bounds 1`] = `
[
  {
    "code": "too_large",
    "max": 1,
    "min": 0,
    "path": [],
  },
]
`;

exports[`should fail to parse if value is outside the bounds 2`] = `
[
  {
    "code": "too_small",
    "max": 1,
    "min": 0,
    "path": [],
  },
]
`;

exports[`should fail to parse if value isn't parsed by the underlying codec 1`] = `
[
  {
    "code": "invalid_type",
    "expected": "number",
    "path": [],
    "received": "string",
  },
]
`;
